# djf-3d-2

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  djf-3d-2Config.cmake  djf-3d-2Config.cmake.in  embiggen.py  install.sh  install.txt  main.sh  makefile  profile.txt  readme.txt  simulate_build.sh  test-text.cpp  uninstall.sh
asm/: readme.txt
demo/: CMakeLists.txt  main.cpp
doc/: readme.txt
include/djf-3d-2/: djf-3d.h
src/: CMakeLists.txt  Canvas.cpp  Canvas.h  Canvas.hpp  Color.h  CoordPair.cpp  CoordPair.h  CoordPair.hpp  CoordTriple.cpp  CoordTriple.h  CoordTriple.hpp  KeyboardState.h  Line2D.cpp  Line2D.hpp  Model3d.cpp  Model3d.h  Model3d.hpp  Perspective.cpp  Perspective.h  Perspective.hpp  Polygon.h  Scene.cpp  Scene.h  TextRenderer.cpp  TextRenderer.h  Vec2f.cpp  Vec2f.h  Vec3f.cpp  Vec3f.h  djf-3d.h  djf_3d.h  djf_3d.hpp
